tests/snapshots/render__tags-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · pr=#123 ci=green · ~/dev/gensokyo ⎇ nebel9┐"
"│1 ○ Reimu              ││line 00                                              │"
"│  │ ⎇ padlet-… pr=#123…││line 01     ~                                        │"
"│4 ├● Youmu             ││line 02     ~~                                       │"
"│  │  ⎇ fix-ci          ││line 03     ~~~                                      │"
"│5 └○ Hieda-no-Akyuu-the││line 04     ~~~~                                     │"
"│     ⎇ a1b2c3d pr=#456…││line 05     ~~~~~                                    │"
"│2 ○ Marisa             ││line 06     ~~~~~~                                   │"
"│    ⎇ main             ││line 07     ~~~~~~~                                  │"
"│3 · Cirno              ││line 08     ~~~~~~~~                                 │"
"│    phase=review       ││line 09     ~~~~~~~~~                                │"
"│6 ○ Chen               ││line 10     ~~~~~~~~~~                               │"
"│                       ││line 11     ~~~~~~~~~~~                              │"
"│                       ││line 12     ~~~~~~~~~~~~                             │"
"│                       ││line 13     ~~~~~~~~~~~~~                            │"
"│                       ││line 14     ~~~~~~~~~~~~~~                           │"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│                       ││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└──── ^] then a key ────┘└─────────────────────────────────────────────────────┘"
