tests/snapshots/render__timetable-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││line 05     ~~~~~                                    │"
"│                       ││line 06     ~~~~~~                                   │"
"│                       ││┌ timetable ────────────────────────────────────────┐│"
"│                       │││   evening-notes  on  23:00        the day, in not ││"
"│                       │││ › slack-morning  on  Tue 09:05    overnight Slack ││"
"│                       │││   inbox-zero     on  10-05 08:00  the morning's m ││"
"│                       │││   broken         off paused     ! never comes rou ││"
"│                       │││   nightly-checks off paused       the tests and t ││"
"│                       │││ [close esc]                                       ││"
"│                       ││└───────────────────────────────────────────────────┘│"
"│                       ││line 15     ~~~~~~~~~~~~~~~                          │"
"│⏲ evening-notes   23:00││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
