tests/snapshots/render__timetable-detail-120x40.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────────────────────────────────────────────┐"
"│1 ○ Reimu              ││line 00                                                                                      │"
"│2 ○ Marisa             ││line 01     ~                                                                                │"
"│3 · Cirno              ││line 02     ~~                                                                               │"
"│                       ││line 03     ~~~                                                                              │"
"│                       ││line 04     ~~~~                                                                             │"
"│                       ││line 05     ~~~~~                                                                            │"
"│                       ││line 06     ~~~~~~                                                                           │"
"│                       ││line 07     ~~~~~~~                                                                          │"
"│                       ││line 08     ~~~~~~~~                                                                         │"
"│                       ││line 09     ~~~~~~~~~                                                                        │"
"│                       ││line 10     ~~~~~~~~~~                                                                       │"
"│                       ││line 11     ~~~~~~~~~~~                                                                      │"
"│                       ││line 12     ~~~~~~~~~~~~                                                                     │"
"│                       ││line 13     ~~~~~~~~~~┌ slack-morning ───────────────────────────────┐                       │"
"│                       ││line 14     ~~~~~~~~~~│ overnight Slack                              │                       │"
"│                       ││line 15     ~~~~~~~~~~│ schedule  5 9 * * 1-5                        │                       │"
"│                       ││line 16     ~~~~~~~~~~│ next      2026-09-22 09:05                   │                       │"
"│                       ││line 17     ~~~~~~~~~~│ target    new                                │                       │"
"│                       ││line 18     ~~~~~~~~~~│ in        ~/dev/mozart                       │                       │"
"│                       ││line 19     ~~~~~~~~~~│ last ran  13h ago                            │                       │"
"│                       ││line 20               │ ran (due 2026-09-21 09:05)                   │                       │"
"│                       ││line 21     ~         │ a run of it is going now                     │                       │"
"│                       ││line 22     ~~        │ [run now r] [pause p] [remove x] [back esc]  │                       │"
"│                       ││line 23     ~~~       └──────────────────────────────────────────────┘                       │"
"│                       ││line 24     ~~~~                                                                             │"
"│                       ││line 25     ~~~~~                                                                            │"
"│                       ││line 26     ~~~~~~                                                                           │"
"│                       ││line 27     ~~~~~~~                                                                          │"
"│                       ││line 28     ~~~~~~~~                                                                         │"
"│                       ││line 29     ~~~~~~~~~                                                                        │"
"│                       ││line 30     ~~~~~~~~~~                                                                       │"
"│                       ││line 31     ~~~~~~~~~~~                                                                      │"
"│⏲ evening-notes   23:00││line 32     ~~~~~~~~~~~~                                                                     │"
"│[summon n] [cast c]    ││line 33     ~~~~~~~~~~~~~                                                                    │"
"│[banish b] [recall r]  ││line 34     ~~~~~~~~~~~~~~                                                                   │"
"│[timetable t] [quit q] ││line 35     ~~~~~~~~~~~~~~~                                                                  │"
"│[?]                    ││line 36     ~~~~~~~~~~~~~~~~                                                                 │"
"│[mouse: shrine m]      ││line 37     ~~~~~~~~~~~~~~~~~                                                                │"
"└──── ^] then a key ────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘"
