tests/snapshots/render__timetable-detail-problem-80x24.snap
---
source: tests/render.rs
expression: t.backend()
---
"┌ gensokyo ─────────────┐┌ 1 Reimu · ~/dev/gensokyo ───────────────────────────┐"
"│1 ○ Reimu              ││line 00                                              │"
"│2 ○ Marisa             ││line 01     ~                                        │"
"│3 · Cirno              ││line 02     ~~                                       │"
"│                       ││line 03     ~~~                                      │"
"│                       ││line 04     ~~~~                                     │"
"│                       ││l┌ broken ────────────────────────────────────────┐  │"
"│                       ││l│ never comes round                              │  │"
"│                       ││l│ schedule  0 0 30 2 *  (paused)                 │  │"
"│                       ││l│ next      paused                               │  │"
"│                       ││l│ target    new                                  │  │"
"│                       ││l│ in        ~/dev/mozart                         │  │"
"│                       ││l│ last ran  never                                │  │"
"│                       ││l│ schedule: 0 0 30 2 * never comes round (a date │  │"
"│                       ││l│ that does not exist, like 30 February)         │  │"
"│                       ││l│ [run now r] [resume p] [remove x] [back esc]   │  │"
"│                       ││l└────────────────────────────────────────────────┘  │"
"│⏲ evening-notes   23:00││line 16     ~~~~~~~~~~~~~~~~                         │"
"│[summon n] [cast c]    ││line 17     ~~~~~~~~~~~~~~~~~                        │"
"│[banish b] [recall r]  ││line 18     ~~~~~~~~~~~~~~~~~~                       │"
"│[timetable t] [quit q] ││line 19     ~~~~~~~~~~~~~~~~~~~                      │"
"│[?]                    ││line 20                                              │"
"│[mouse: shrine m]      ││line 21     ~                                        │"
"└───────────────────────┘└─────────────────────────────────────────────────────┘"
